2007-01-22 Raphael Neider <rneider AT web.de>

	* src/regression/bank1.c, src/regression/compare6.c,
	  src/regression/add.c: cosmetic changes
	* src/pic/pcode.h: moved GPTRTAG_* here from gen.c
	* src/pic/gen.c: fixed global zero and one,
	  (aopForSym): removed unued code,
	  (aopGet): assert aop is defined, check and use `index' of
	    pCodeImmd operands (fixes #1630908),
	* src/pic/pcode.c (get_op): added output of generic pointer tag,
	  (register_reassign): prevent accidental register unification,
	  (ReuseReg): cosmetic changes (also above)
	* src/pic/glue.c (pic14_constructAbsMap,pic14emitRegularMap,
	  pic14emitStaticSeg): do not emit initialized data,
	  (printIval*): replaced with working versions,
	  (pic14createInterruptVect,picglue): use idata for initialized data,
	    now init data should work in all modules (not only main()),
	* device/lib/pic/libsdcc/idata.c: NEW, handle initialized data

2007-01-21 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/configure.in: introduced macro DD_COPT_NO_IGNORE,
	  use -fPIC or -fpic if they are supported and not ignored
	* src/SDCCval.c: fixed bug introduced by me in rev. #4577
	* support/cpp2/libcpp/lex.c: fixed gcc 4.1.1 warnings

2007-01-20 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.lex, src/SDCCmain.c, sdc/SDCCglobl.h, doc/sdccman.lyx:
	  implemented RFE #1470316: allow "$" in variable names

2007-01-20 Raphael Neider <rneider AT web.de>

	* device/include/pic/pic14regs.h: reverted accidental wipe of the file

2007-01-20 Raphael Neider <rneider AT web.de>

	* device/lib/pic/libdev/devices.txt: device list for mkall.sh
	* device/lib/pic/libdev/mkall.sh: script to rebuild all device libs
	* device/lib/pic/libdev/pic14ports.txt: device PORT specifications
	* support/scripts/inc2h.pl: fixed major .inc parsing bugs,
	  applied patch from Robert Tate (#1629249) to add PORTs and TRISs
	* device/lib/pic/libdev/pic*.c,
	* device/include/pic/pic*.h: regenerated with enhanced inc2h.pl